--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./header.html"></include>
+    <include src="./gallery.html"></include>
+    <include src="./modal.html"></include>
+    <include src="./my-library.html"></include>
+    <include src="./footer.html"></include>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
