am adaugat folder partials

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <include src="./header.html"></include>
-    <include src="./gallery.html"></include>
-    <include src="./modal.html"></include>
-    <include src="./my-library.html"></include>
-    <include src="./footer.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/modal.html"></include>
+    <include src="./partials/my-library.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <script type="module" src="./index.js"></script>
   </body>
