--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="https://kit.fontawesome.com/a7e9f794eb.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <include src="./partials/header.html"></include>
@@ -13,6 +14,7 @@
     <include src="./partials/my-library.html"></include>
     <include src="./partials/footer.html"></include>
 
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
+    <script type="module" src="./js/dark-toggle.js"></script>
   </body>
 </html>
