--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <include src="./partials/my-library.html"></include>
     <include src="./partials/footer.html"></include>
 
-    <!-- <script type="module" src="./index.js"></script> -->
+    <script type="module" src="./index.js"></script>
     <script type="module" src="./js/dark-toggle.js"></script>
   </body>
 </html>
