--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,14 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
+    <include src="./partials/loader.html"></include>
+    <div id="resultContainer"></div>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/my-library.html"></include>
     <include src="./partials/footer.html"></include>
 
+    <script type="module" src="./js/spinner.js"></script>
     <script type="module" src="./index.js"></script>
     <script type="module" src="./js/dark-toggle.js"></script>
   </body>
