--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <include src="./partials/header.html"></include>
     <include src="./partials/loader.html"></include>
-    <div id="resultContainer"></div>
+    <include src="./partials/search-movies.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/my-library.html"></include>
