added dark mode class to body

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     ></script>
     <link rel="stylesheet" href="./css/index.css" />
   </head>
-  <body>
+  <body class="light-mode">
     <include src="./partials/header.html"></include>
     <include src="./partials/loader.html"></include>
     <include src="./partials/search-movies.html"></include>
