--- a/src/library.html
+++ b/src/library.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filmoteka</title>
+    <title>My Library</title>
     <!-- Favicon -->
     <link rel="icon" href="./images/favicon_io/favicon.ico" />
     <!-- Fonts -->
@@ -17,19 +17,14 @@
       src="https://kit.fontawesome.com/a7e9f794eb.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/my-library.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
-  <body class="light-mode">
-    <include src="./partials/header.html"></include>
-    <include src="./partials/loader.html"></include>
-    <include src="./partials/search-movies.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/modal.html"></include>
-    <!-- <include src="./partials/my-library.html"></include> -->
-    <include src="./partials/footer.html"></include>
-
-    <script type="module" src="./js/spinner.js"></script>
-    <script type="module" src="./index.js"></script>
-    <script type="module" src="./js/dark-toggle.js"></script>
-  </body>
 </html>
+<body>
+  <include src="./partials/my-library.html"></include>
+  <include src="./partials/footer.html"></include>
+
+  <script type="module" src="./js/my-library.js"></script>
+  <script type="module" src="./js/dark-toggle.js"></script>
+</body>
