--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <include src="./partials/search-movies.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/modal.html"></include>
-    <!-- <include src="./partials/my-library.html"></include> -->
+    <include src="./partials/my-library.html"></include>
     <include src="./partials/footer.html"></include>
 
     <script type="module" src="./js/spinner.js"></script>
