--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <include src="./partials/loader.html"></include>
     <include src="./partials/search-movies.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/scroll-button.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/my-library.html"></include>
@@ -32,5 +33,6 @@
     <script type="module" src="./js/spinner.js"></script>
     <script type="module" src="./index.js"></script>
     <script type="module" src="./js/dark-toggle.js"></script>
+    <script src="./js/scroll-button.js"></script>
   </body>
 </html>
